--- a/sass/components/g5/forms/_input-fields.scss
+++ b/sass/components/g5/forms/_input-fields.scss
@@ -65,6 +65,10 @@ textarea.materialize-textarea {
     content: attr(data-error);
     color: $input-error-color;
     opacity: 1;
+    position: absolute;
+    top: 0;
+    right: 250px;
+    z-index: 3;
   }
 
   // Full width label when using validate for error messages
